# sdl_app

./: .gitignore  README.md  TODO.md  meson.build  meson_options.txt  mingw64insall
docs/: mingw64dlls  utf8_test3.txt
icons/: ionic.json  source.txt
libs/: meson.build
libs/PennerEasing/: Back.cpp  Back.h  Bounce.cpp  Bounce.h  Circ.cpp  Circ.h  Cubic.cpp  Cubic.h  Elastic.cpp  Elastic.h  Expo.cpp  Expo.h  Linear.cpp  Linear.h  Quad.cpp  Quad.h  Quart.cpp  Quart.h  Quint.cpp  Quint.h  Sine.cpp  Sine.h
libs/editor/: app.cpp  app.h  backend.cpp  backend.h  block.cpp  block.h  cursor.cpp  cursor.h  document.cpp  document.h  dots.cpp  editor.cpp  editor.h  explorer.cpp  explorer.h  extension.cpp  extension.h  highlighter.cpp  highlighter.h  indexer.cpp  indexer.h  operation.cpp  operation.h  search.cpp  snapshot.cpp  statusbar.cpp  utf8.cpp  utf8.h  util.cpp
libs/framework/common/: color.cpp  color.h  hash.cpp  hash.h  rect.cpp  rect.h  utf8.cpp  utf8.h
libs/framework/renderer/: fallback_font.cpp  fallback_font.h  font.cpp  font.h  pango_font.cpp  pango_font.h  renderer.cpp  renderer.h
libs/framework/system/: events.cpp  events.h  system.cpp  system.h  tasks.cpp  tasks.h
libs/framework/ui/: button.cpp  button.h  damage.cpp  damage.h  icons.cpp  icons.h  image.cpp  image.h  layout.cpp  layout.h  list.cpp  list.h  panel.cpp  panel.h  popup.cpp  popup.h  scrollarea.cpp  scrollarea.h  scrollbar.cpp  scrollbar.h  splitter.cpp  splitter.h  statusbar.cpp  statusbar.h  styled_frame.cpp  styled_frame.h  tabbar.cpp  tabbar.h  text.cpp  text.h  text_block.cpp  text_block.h  view.cpp  view.h  view_style.cpp  view_style.h  view_types.h
libs/quickjs/: Makefile
libs/tm-parser/tests/: main.cpp
libs/tm-parser/tests-c/: main.cpp
libs/tm-parser/textmate/: textmate.cpp  textmate.h
libs/tm-parser/textmate/parser/: grammar.cpp  grammar.h  parser.cpp
libs/tm-parser/textmate/theme/: theme.cpp  theme.h
resources/: settings.json
src/: app_view.cpp  app_view.h  commands_view.cpp  commands_view.h  completer.cpp  completer_view.cpp  completer_view.h  editor_view.cpp  editor_view.h  events.h  explorer_view.cpp  explorer_view.h  gutter.cpp  gutter.h  gutter_view.cpp  gutter_view.h  input_text.cpp  input_text.h  layout.cpp  layout.h  main.cpp  minimap.cpp  minimap.h  minimap_view.cpp  minimap_view.h  prompt_view.cpp  prompt_view.h  render_cache.cpp  render_cache.h  render_font.cpp  render_font.h  renderer.cpp  renderer.h  rich_text.cpp  rich_text.h  search_view.cpp  search_view.h  statusbar_view.cpp  statusbar_view.h  tabbar_view.cpp  (+5 more)
src/backend/: fallback_font.cpp  fallback_font.h  render_cache.cpp  render_cache.h  render_curses.cpp  render_font.cpp  render_font.h  render_sdl.cpp  render_sdl.h  renderer.cpp  renderer.h
src/scripting/: js_app.cpp  js_app.h  scripting.cpp  scripting.h
src/ui/: animation.cpp  animation.h  app_view.cpp  app_view.h  button.cpp  button.h  damage.cpp  damage.h  editor.cpp  editor.h  editor_view.cpp  editor_view.h  events.h  explorer_view.cpp  explorer_view.h  image.cpp  image.h  inputtext.cpp  inputtext.h  layout.cpp  layout.h  list.cpp  list.h  panel.cpp  panel.h  popup.cpp  popup.h  scrollarea.cpp  scrollarea.h  scrollbar.cpp  scrollbar.h  splitter.cpp  splitter.h  statusbar_view.cpp  statusbar_view.h  style.cpp  style.h  tabbar.cpp  tabbar.h  text.cpp  (+4 more)
tests/: notepad_created_file.txt  utf8_test2.txt  utf8_test2_orig.txt
