option(
  'curses_root',
  type: 'string', value: '',
  description: 'curses root dir'
)

option(
  'build_sdl',
  type: 'boolean', value: true,
  description: 'build sdl-based app'
)

option(
  'enable_svg',
  type: 'boolean', value: true,
  description: 'build with svg'
)

option(
  'build_curses',
  type: 'boolean', value: false,
  description: 'build curses-based app'
)

option(
  'enable_scripting',
  type: 'boolean', value: false,
  description: 'build with scripting'
)

